--- a/src/JuliusSweetland.OptiKey/UI/Views/Keyboards/English/Alpha.xaml
+++ b/src/JuliusSweetland.OptiKey/UI/Views/Keyboards/English/Alpha.xaml
@@ -96,13 +96,13 @@
         <controls:Key Grid.Row="2" Grid.Column="19" Grid.ColumnSpan="2"
                       ShiftUpText="p" ShiftDownText="P"
                       SharedSizeGroup="KeyWithSingleLetter"
-                      Value="p"/>
-        <controls:Key Grid.Row="2" Grid.Column="21" Grid.ColumnSpan="2"
+                      Value="p"/>        
+        <controls:Key Grid.Row="2" Grid.RowSpan="3" Grid.Column="23" Grid.ColumnSpan="2"
                       SymbolGeometry="{StaticResource MenuIcon}"
                       Text="{x:Static resx:Resources.MENU}"
                       SharedSizeGroup="KeyWithSymbol"
                       Value="{x:Static models:KeyValues.MenuKeyboardKey}"/>
-        <controls:Key Grid.Row="2" Grid.Column="23" Grid.ColumnSpan="1"/>
+        <!--<controls:Key Grid.Row="2" Grid.Column="23" Grid.ColumnSpan="1"/>-->
         
 
         <controls:Key Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"
@@ -146,7 +146,7 @@
                       ShiftUpText="l" ShiftDownText="L"
                       SharedSizeGroup="KeyWithSingleLetter"
                       Value="l"/>
-        <controls:Key Grid.Row="3" Grid.Column="20" Grid.ColumnSpan="2"
+        <!--<controls:Key Grid.Row="3" Grid.Column="20" Grid.ColumnSpan="2"
                       SymbolGeometry="{StaticResource AlphaIcon}"
                       Text="{x:Static resx:Resources.ALPHA}"
                       SharedSizeGroup="KeyWithSymbol"
@@ -155,7 +155,7 @@
                       SymbolGeometry="{StaticResource DiacriticsIcon}"
                       Text="{x:Static resx:Resources.DIACRITICS}"
                       SharedSizeGroup="KeyWithSymbol"
-                      Value="{x:Static models:KeyValues.Diacritic1KeyboardKey}"/>
+                      Value="{x:Static models:KeyValues.Diacritic1KeyboardKey}"/>-->
 
         <controls:Key Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
                       SymbolGeometry="{StaticResource ShiftIcon}"
@@ -200,7 +200,7 @@
                       Text="{x:Static resx:Resources.BACK_WORD_SPLIT_WITH_NEWLINE}"
                       SharedSizeGroup="KeyWithSymbol"
                       Value="{x:Static models:KeyValues.BackManyKey}"/>
-        <controls:Key Grid.Row="4" Grid.Column="20" Grid.ColumnSpan="2"
+        <!--<controls:Key Grid.Row="4" Grid.Column="20" Grid.ColumnSpan="2"
                       SymbolGeometry="{StaticResource NumericAndSymbolsIcon}"
                       Text="{x:Static resx:Resources.NUM_SYM_SPLIT_WITH_NEWLINE}"
                       SharedSizeGroup="KeyWithSymbol"
@@ -209,7 +209,7 @@
                       SymbolGeometry="{StaticResource CurrenciesIcon}"
                       Text="{x:Static resx:Resources.CURRENCIES}"
                       SharedSizeGroup="KeyWithSymbol"
-                      Value="{x:Static models:KeyValues.Currencies1KeyboardKey}"/>
+                      Value="{x:Static models:KeyValues.Currencies1KeyboardKey}"/>-->
 
         <controls:Key Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2"
                       Text="{x:Static resx:Resources.CTRL}"
@@ -249,7 +249,7 @@
                       SharedSizeGroup="KeyWithSymbol"
                       WidthSpan="2"
                       Value="&#x0a;" /><!--Hex for "\n"-->
-        <controls:Key Grid.Row="5" Grid.Column="20" Grid.ColumnSpan="2"
+        <!--<controls:Key Grid.Row="5" Grid.Column="20" Grid.ColumnSpan="2"
                       SymbolGeometry="{StaticResource MouseIcon}"
                       Text="{x:Static resx:Resources.MOUSE}"
                       SharedSizeGroup="KeyWithSymbol"
@@ -258,6 +258,6 @@
                       SymbolGeometry="{StaticResource PhysicalKeysIcon}"
                       Text="{x:Static resx:Resources.PHYSICAL_KEYS_SPLIT_WITH_NEWLINE}"
                       SharedSizeGroup="KeyWithSymbol"
-                      Value="{x:Static models:KeyValues.PhysicalKeysKeyboardKey}"/>
+                      Value="{x:Static models:KeyValues.PhysicalKeysKeyboardKey}"/>-->
     </Grid>
 </controls:KeyboardView>
